// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <Button> Второстепенная 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: none;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #a2c679;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Дефолтная 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #a2c679;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Дефолтная с дополнительным CSS классом 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #a2c679;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="custom c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Зеленая 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #a2c679;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Информационная 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  padding-top: 11px;
  padding-bottom: 11px;
  color: #4786c8;
  border: 1px solid #e1e1e1;
  background-color: #ffffff;
  font-weight: 400;
}

.c0:hover,
.c0:active {
  color: #316aa5;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Контрастная 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  color: #a2c679;
  background-color: #ffffff;
}

.c0:hover,
.c0:active {
  color: #87b552;
  box-shadow: 0 2px 4px rgba(0,0,0,0.15);
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Красная 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #e95454;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #e32222;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="red"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> С иконкой (позиционирование по умолчанию) 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #a2c679;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 10px;
  margin-right: 0px;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  top: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  vertical-align: middle;
}

.c1 > * {
  max-width: 16px;
  max-height: 16px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    <div>
      Icon
    </div>
  </span>
  <span
    className="c2"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> С иконкой справа 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #a2c679;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 10px;
}

.c2 {
  z-index: 200;
  position: relative;
  display: inline-block;
  top: -1px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  vertical-align: middle;
}

.c2 > * {
  max-width: 16px;
  max-height: 16px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
  <span
    className="c2"
  >
    <div>
      Icon
    </div>
  </span>
</button>
`;

exports[`Верстка компонента <Button> С рамкой 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  padding: 11px;
  color: #a2c679;
  border: 1px solid #a2c679;
  background-color: transparent;
}

.c0:hover,
.c0:active {
  color: #87b552;
  border-color: #87b552;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Верстка компонента <Button> Синяя 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  padding: 12px 12px;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  background-color: #e1e1e1;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  transition: background-color .12s linear, color .12s linear, box-shadow .2s linear, border-color .12s linear;
  background-color: #4786c8;
}

.c0:hover,
.c0:active {
  color: #ffffff;
  background-color: #316aa5;
}

.c0[disabled] {
  color: #8d8d8d;
  background-color: #e1e1e1;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  z-index: 200;
  position: relative;
  display: inline-block;
  padding: 0 2px;
  margin-left: 0px;
  margin-right: 0px;
}

<button
  className="c0"
  color="blue"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;
